[package]
name = "gitlist"
version = "0.1.0"
edition = "2021"
description = "A simple command-line tool to recursively find and list Git repositories."
license = "MIT"
repository = "https://github.com/cleavera/gitlist"
keywords = ["cli", "git", "repository", "list"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
